Fix extra padding on left of nav.

--- a/css/main.css
+++ b/css/main.css
@@ -65,6 +65,7 @@ body {
 
 .nav {
     margin: 0;
+    padding-left: 0;
     padding-top: .25em;
     padding-bottom: .25em;
     list-style-type: none;
